<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/propertyListFragment"
        android:enabled="true"
        android:icon="@drawable/ic_list_24"
        android:orderInCategory="1"
        android:title="@string/property_list"
        app:iconTint="@color/primaryColor" />
    <item
        android:id="@+id/propertyDetailFragment"
        android:enabled="true"
        android:icon="@drawable/ic_assignment_24"
        android:orderInCategory="2"
        android:title="@string/property_detail"
        app:iconTint="@color/primaryColor" />
    <item
        android:id="@+id/mapFragment"
        android:enabled="true"
        android:icon="@drawable/ic_map_24"
        android:orderInCategory="3"
        android:title="@string/map_view"
        app:iconTint="@color/background" />

</menu>